# PleuraDetection

./: CMakeLists.txt  README.md  main.cpp
core/: BoundariesExtractor.cpp  BoundariesExtractor.h  FeatureExtractor.cpp  FeatureExtractor.h  PreProcessor.cpp  PreProcessor.h  ShowPrediction.cpp  ShowPrediction.h  Tester.cpp  Tester.h  Trainer.cpp  Trainer.h
python/: Classification.py
util/: Cast.h  ColorConverterFilter.cpp  ColorConverterFilter.h  CustomPrint.h  ExtractChannelFilter.cpp  ExtractChannelFilter.h  FractalDimensionCalculator.cpp  FractalDimensionCalculator.h  Illuminant.h  ImageOperations.h  InputOutput.h  Math.h  VTKViewer.h
